--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,129 @@
-.App {
-  text-align: center;
+* {
+  padding: 0;
+  margin: 0;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.fullApp {
+  background-color: #3b3b3b;
+  color: white;
+  padding: 20px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.totals {
+  height: 270px;
+  display: flex;
+  align-items: center;
+  gap: 80px;
+  background-color: #626262;
+  border-radius: 10px;
+  padding: 30px 60px;
+  justify-content: space-around;
+  margin-bottom: 30px;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.card {
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
   color: white;
+  font-size: 30px;
+  font-weight: 400;
+  width: 355px;
+  height: 181px;
+  background-color: #9b9b9b;
+  border-radius: 15px;
+}
+.addIncome {
+  background-image: linear-gradient(to right, #b5dc52, #89e148);
+  width: 168px;
+  height: 38px;
+  border-radius: 15px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 16px;
+  font-weight: 700;
+}
+.addExpense {
+  background: linear-gradient(90deg, #ff9595 0%, #ff4747 80%, #ff3838 100%);
+
+  width: 168px;
+  height: 38px;
+  border-radius: 15px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 16px;
+  font-weight: 700;
+}
+.mygrid {
+  display: grid;
+  grid-template-columns: 3fr 2fr;
+  gap: 20px;
 }
 
-.App-link {
-  color: #61dafb;
-}
+.recentTrans {
+  background-color: white;
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  height: 345px;
+  border-radius: 15px;
+  color: black;
+  padding: 20px;
+}
+.nothing {
+  background-color: white;
+  height: 25px;
+  border-radius: 15px;
+  color: black;
+  padding: 20px;
+  font-weight: 600;
+}
+.transaction {
+  padding: 10px;
+  display: flex;
+  justify-content: space-between;
+  border-bottom: 1px solid gray;
+  align-items: center;
+  margin-bottom: 30px;
+}
+.left {
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+}
+.left span {
+  width: 38px;
+  height: 38px;
+  border-radius: 50%;
+  border: 1px solid black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #d9d9d9;
+}
+.right {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 10px;
+}
+.directionButtons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+@media screen and (max-width: 480px) {
+  .totals {
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+    margin-bottom: 280px;
   }
-  to {
-    transform: rotate(360deg);
+  .card {
+    padding: 20px 0px;
+  }
+  .mygrid {
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
   }
 }
